fixes margin and letter spacing of heading subtext

--- a/Bootstrap/css/agency.css
+++ b/Bootstrap/css/agency.css
@@ -161,7 +161,8 @@ header.masthead {
       font-weight: 700;
       line-height: 50px;
       margin-bottom: 25px;
-      margin-left: -75px;
+      margin-left: -30px;
+      letter-spacing: 2px;
       font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
       text-transform: uppercase; }
 
@@ -181,6 +182,7 @@ header.masthead {
       line-height: 75px;
       letter-spacing: 18px;
       margin-bottom: 50px;
+      margin-left: -75px;
       font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
       text-transform: uppercase; } }
 
